fix: Prevent popovers from overflowing horizontally

--- a/pages/popover/positioning.scss
+++ b/pages/popover/positioning.scss
@@ -5,9 +5,9 @@
 
 .grid {
   box-sizing: border-box;
-  height: 100vh;
+  height: calc(100vh - 148px);
   flex: 1 1 auto;
-  padding: 1.2rem;
+  // padding: 1.2rem;
 
   display: grid;
   display: -ms-grid;
@@ -56,4 +56,10 @@
   align-items: flex-end;
   grid-column: 3;
   -ms-grid-column: 3;
+}
+
+.tall-trigger {
+  display: block;
+  width: 1rem;
+  height: 300px;
 }
